objects/Bicycle__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <label>Gears</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Bicycle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bicycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>